# fastapi-web

./: .coverage  .env.dev  .env.pro  .gitignore  README.md  check.sh  coverage.xml  main.py  pyproject.toml  sonar-project.properties  start.sh
app/: main.py
app/api/: auth_router.py  health_router.py  log_router.py  sys_log_router.py  user_router.py
app/core/: config.py  exceptions.py  logger.py  permissions.py  redis_service.py  response.py  security.py  validator.py
app/db/: init_db.py  session.py
app/middleware/: logging_middleware.py
app/models/: log_model.py  sys_log_model.py  user_model.py
app/repositories/: log_repository.py  sys_log_repository.py  user_repository.py
app/schemas/: auth_schema.py  base.py  base_schema.py  log_schema.py  sys_log_schema.py  user.py  user_schema.py
app/services/: log_service.py  sys_log_service.py  user_service.py
tests/: __init__.py  conftest.py  test_basic_functionality.py  test_password_security.py  test_password_security_fixed.py
tests/integration/: test_user_workflow.py
tests/performance/: __init__.py  test_db_performance.py
tests/security/: __init__.py  test_password_security.py  test_user_security.py
tests/unit/api/: test_user_router.py
tests/unit/core/: test_config.py  test_exceptions.py
tests/unit/db/: test_session.py
tests/unit/middleware/: __init__.py  test_logging_middleware.py
tests/unit/models/: test_user_model.py
tests/unit/repositories/: test_user_repository.py
tests/unit/schemas/: test_user_schema.py
tests/unit/security/: __init__.py  test_security.py
tests/unit/services/: test_user_service.py
