[project]
name = "fastapi-web"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "cryptography>=46.0.3",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=24.2.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "basedpyright>=1.36.2",
    "faker>=30.8.1",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "bandit>=1.7.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]

[tool.pyright]
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
pythonPlatform = "Darwin"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["venv", ".venv"]

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "venv", ".venv"]
ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.bandit]
exclude_dirs = ["venv", ".venv", "tests"]
skips = ["B101"]
